src/test/ui/impl-trait/multiple-lifetimes/error-handling.stderr
error: lifetime may not live long enough
  --> $DIR/error-handling.rs:10:1
   |
LL | existential type E<'a, 'b>: Sized;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ opaque type requires that `'a` must outlive `'static`
...
LL | fn foo<'a, 'b, 'c>(x: &'static i32, mut y: &'a i32) -> E<'b, 'c> {
   |        -- lifetime `'a` defined here
help: to allow this `impl Trait` to capture borrowed data with lifetime `'a`, add `'a` as a constraint
   |
LL | existential type E<'a, 'b>: Sized; + 'a
   |

error: aborting due to previous error

